--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
     --primary-violet:#6600cc;
     --primary-orange:#ffa60f;
     --primary-white:#fff;
+    --primary-yellow:#FDDA0D;
 }
 *{
     padding:0;
