--- a/src/Components/Month/Month.css
+++ b/src/Components/Month/Month.css
@@ -86,11 +86,11 @@
     width: 25%;
     padding-top: 5px;
 }
-.price-session{
+.session-duration .price-session{
     font-size:20px;
     font-weight:bold;
 }
-.session-count{
+.session-duration .session-count{
     font-size: 13px;
     line-height: 20px;
 }
