--- a/src/Components/Year/Year.css
+++ b/src/Components/Year/Year.css
@@ -4,30 +4,29 @@
     justify-content: space-between;
     margin: 0 auto;
 }
-.year-container ul{
-    text-align: center;
+.year-container .year-board-btn{
+    text-align: left;
     padding: 20px 0;
     list-style-type: none;
     margin: auto;
     width: 90%;
 
 }
-.year-container ul li{
+.year-container .year-board-btn button{
     display: inline;
     margin: 2px 20px;
     padding: 12px 17px;
     border-radius: 20px;
-    
-    
-}
-.year-container ul li a{
-    text-decoration: none;
+    border-style:none ;
     font-size:15px;
     color:var(--primary-white);
+    background-color: var(--primary-violet);
     font-weight:600;
-    
-    
 }
+.year-container .year-board-btn button:hover{
+    background-color: var(--primary-blue);
+}
+
 .active{
     background: var(--primary-blue);  
 }
@@ -35,13 +34,17 @@
     background: var(--primary-blue);
 }
 .session-details-container{
-    width: 97%;
+    width: 95%;
     padding: 40px 30px;
     display: flex;
     justify-content: space-around;
     font-size:20px;
     font-weight:bold;
     margin: 0 auto;
+}
+.session-number{
+    width: 12%;
+    line-height: 30px;
 }
 .session-count{
   font-size:40px;
@@ -83,28 +86,36 @@
 .sub-para{
     font-size:12px;
 }
-.A1 .head-para{
+.A11{
+    width: 30%;
+    padding: 20px;
+    line-height: 28px;
+}
+.A22{
+    width: 40%;
+    padding: 20px;
+    line-height: 28px;
+}
+
+.A11 .head-para{
  font-size:20px;
  line-height: 40px;
 }
-.A2 .head-para{
+.A22 .head-para{
     font-size:20px;
     line-height: 40px;
 }
-.A3 .head-para{
-font-size:20px;
-line-height: 40px;
-}
+
 .tab-sub{
     font-size:15px;
     font-weight:bold;
 }
 .yearA3{
-    width: 18%;
+    width: 30%;
     padding: 20px;
     text-align:center;
-    padding-top:73px;
     color:black;
+    margin: auto;
 }
 .yearA3 .month-btn{
     height:40px;
